<?xml version="1.0"?>
<package format="2">
  <name>gbeam_ground</name>
  <version>1.0.1</version>
  <description>The gbeam_ground package</description>

  <maintainer email="leonardo.cecchin@polimi.it">Leonardo cecchin</maintainer>

  <license>Proprietary</license>

  <author email="leonardo.cecchin@polimi.it">Leonardo Cecchin</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gbeam_library</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gbeam_library</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gbeam_library</exec_depend>

  <export>

  </export>
</package>
